Editing html and css files

--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
+
+
+
 <!doctype html>
 <html>
 <head>
-    <!-- meta tags, links to css, etc. -->
+    <link rel="stylesheet"  type="text/css" href="assets/css/styles.css">
     <title>DIG 245 CSS Self-Portrait</title>
 </head>
 <body>
 
     <!-- visible content goes here -->
     <h1>DIG 245 CSS Self-Portrait</h1>
+
+
+    <div class="torso"></div>
+    <div class="neck"></div>
+    <div class="back-hair-right"></div>
+    <div class="back-hair-left"></div>
+    <div class="face"></div>
+    <div class="top-hair-left"></div>
+    <div class="top-hair-mid"></div>
+    <div class="top-hair-right"></div>
+    <div class="second-top-hair-left"></div>
+    <div class="second-top-hair-mid"></div>
+    <div class="second-top-hair-right"></div>
+    <div class="nose"></div>
+    <div class="mouth"></div>
+    <div class="eye-white-left"></div>
+    <div class="eye-iris-left"></div>
+    <div class="eye-pupil-left"></div>
+    <div class="eye-white-right"></div>
+    <div class="eye-iris-right"></div>
+    <div class="eye-pupil-right"></div>
+
+    <div class="cube-body"></div>
+    <div class="cube-one"></div>
+      
 
     <!-- load javascript after the page elements render -->
     <script src="assets/js/main.js"></script>
