Finished rubik's cube items on html. Added color changing in css.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
 
     <div class="cube-body"></div>
     <div class="cube-one"></div>
+    <div class="cube-two"></div>
+    <div class="cube-three"></div>
+    <div class="cube-four"></div>
+    <div class="cube-five"></div>
+    <div class="cube-six"></div>
+    <div class="cube-seven"></div>
+    <div class="cube-eight"></div>
+    <div class="cube-nine"></div>
       
 
     <!-- load javascript after the page elements render -->
