Added caption to html css style

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div class="cube-seven"></div>
     <div class="cube-eight"></div>
     <div class="cube-nine"></div>
+    <div class="text">hover over the cube!</div>
       
 
     <!-- load javascript after the page elements render -->
