Added HTML count and cursor coordinates

--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
     <div class="cube-seven"></div>
     <div class="cube-eight"></div>
     <div class="cube-nine"></div>
-    
-    <div class="text">hover over the cube!</div>
+
+    <p class="mouse-text">x: <span id="mouseX" class="mouse-text">0</span></p>
+    <p class="mouse-text">y: <span id="mouseY" class="mouse-text">0</span></p>
+
+    <div class="text">hover over the cube! <br>
+    original design in <a href="https://www.figma.com/file/bfbg7BKssVS5pFzenGV4vk/Untitled?type=design&node-id=0%3A1&mode=design&t=qd8EYektpnuoEfzO-1" target="_blank">figma</a>.</div>
+
       
 
     <!-- load javascript after the page elements render -->
